[gd_scene load_steps=51 format=2]

[ext_resource path="res://Game/Players/Player.gd" type="Script" id=1]
[ext_resource path="res://Game/Menus/Textures/ReadyDialog.png" type="Texture" id=2]
[ext_resource path="res://Game/Effects/Particles/GroundDust.tscn" type="PackedScene" id=3]
[ext_resource path="res://Game/Players/Classes/Frog/Textures/Crown.png" type="Texture" id=4]
[ext_resource path="res://Game/Players/States/stand.gd" type="Script" id=5]
[ext_resource path="res://Game/Players/States/run.gd" type="Script" id=6]
[ext_resource path="res://Game/Players/States/enter_door.gd" type="Script" id=7]
[ext_resource path="res://Game/Players/States/walljump.gd" type="Script" id=8]
[ext_resource path="res://Game/Players/States/expulse.gd" type="Script" id=9]
[ext_resource path="res://Game/Players/States/push_wall.gd" type="Script" id=10]
[ext_resource path="res://Game/Players/States/fall.gd" type="Script" id=11]
[ext_resource path="res://Game/Players/States/floor_turn.gd" type="Script" id=12]
[ext_resource path="res://Game/Players/States/jump.gd" type="Script" id=13]
[ext_resource path="res://Game/Players/States/wallslide.gd" type="Script" id=14]
[ext_resource path="res://Game/Players/States/enter_door_fade.gd" type="Script" id=15]
[ext_resource path="res://Game/Players/States/respawn.gd" type="Script" id=16]
[ext_resource path="res://Game/Players/States/use_power.gd" type="Script" id=17]
[ext_resource path="res://Game/Players/States/death.gd" type="Script" id=18]
[ext_resource path="res://Game/Players/States/swim.gd" type="Script" id=19]
[ext_resource path="res://Game/Players/States/enter_swim.gd" type="Script" id=20]
[ext_resource path="res://Game/Players/Classes/Frog/Textures/Invincibility.png" type="Texture" id=21]
[ext_resource path="res://Game/Players/States/exit_door_fade.gd" type="Script" id=22]
[ext_resource path="res://Game/Players/States/kiss_princess.gd" type="Script" id=23]
[ext_resource path="res://Game/Players/States/tongue.gd" type="Script" id=24]
[ext_resource path="res://Game/Players/Classes/Frog/Textures/Tongue.png" type="Texture" id=25]
[ext_resource path="res://Game/Players/Classes/Frog/Textures/TongueEnd.png" type="Texture" id=26]

[sub_resource type="Animation" id=1]
resource_name = "extend_tongue"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("TongueBody:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 84, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TongueEnd:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 19, 0 ), Vector2( 102, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7, 10 )

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item;

uniform sampler2D mask_texture;
uniform float mask_offset;
uniform float mask_flip;

void fragment() {
    vec4 result = texture(TEXTURE, UV);
	vec2 pos = UV * vec2(mask_offset, 1);
	pos = vec2(abs(mask_flip - pos.x), pos.y);
    result.a *= texture(mask_texture, pos).a;
    COLOR = result;
}"

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )
shader_param/mask_offset = null
shader_param/mask_flip = null

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 21 )
region = Rect2( 0, 0, 38, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 21 )
region = Rect2( 38, 0, 38, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 21 )
region = Rect2( 76, 0, 38, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 21 )
region = Rect2( 114, 0, 38, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 21 )
region = Rect2( 152, 0, 38, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 21 )
region = Rect2( 190, 0, 38, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 21 )
region = Rect2( 228, 0, 38, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 21 )
region = Rect2( 266, 0, 38, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 21 )
region = Rect2( 304, 0, 38, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 21 )
region = Rect2( 342, 0, 38, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 21 )
region = Rect2( 380, 0, 38, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 21 )
region = Rect2( 418, 0, 38, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 21 )
region = Rect2( 456, 0, 38, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 21 )
region = Rect2( 494, 0, 38, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 21 )
region = Rect2( 532, 0, 38, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 21 )
region = Rect2( 570, 0, 38, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 21 )
region = Rect2( 608, 0, 38, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 21 )
region = Rect2( 646, 0, 38, 32 )

[sub_resource type="SpriteFrames" id=24]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Player" type="KinematicBody2D" groups=[
"PlayerNode",
]]
position = Vector2( 2, 0 )
collision_layer = 2
collision_mask = 129
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -2, -16 )
centered = false

[node name="Tongue" type="Node2D" parent="Sprite"]
visible = false

[node name="TongueChecker" type="RayCast2D" parent="Sprite/Tongue"]
position = Vector2( 13, 0 )
rotation = -1.5708
cast_to = Vector2( 0, 87 )
collide_with_areas = true
collide_with_bodies = false

[node name="TongueEnd" type="Sprite" parent="Sprite/Tongue"]
position = Vector2( 19, 0 )
texture = ExtResource( 26 )

[node name="TongueBody" type="Sprite" parent="Sprite/Tongue"]
position = Vector2( 13, -2 )
texture = ExtResource( 25 )
centered = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite/Tongue"]
anims/extend_tongue = SubResource( 1 )

[node name="PowerPoint" type="Node2D" parent="Sprite"]
visible = false
position = Vector2( 16, -2 )

[node name="CenterPoint" type="Node2D" parent="Sprite"]
visible = false
position = Vector2( 16, -2 )

[node name="BubblePoint" type="Node2D" parent="Sprite"]
visible = false
position = Vector2( 2, 16 )

[node name="Dialog" type="Sprite" parent="."]
position = Vector2( 0, -40 )
texture = ExtResource( 2 )

[node name="Crown" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -48 )
texture = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 124

[node name="CollisionBody" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -2, -10 )
shape = SubResource( 2 )

[node name="EveryTimer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="ObjectTimer" type="Timer" parent="."]
one_shot = true

[node name="LifetimeTimer" type="Timer" parent="."]
one_shot = true

[node name="CollisionBody" type="CollisionShape2D" parent="."]
position = Vector2( -2, -10 )
shape = SubResource( 3 )

[node name="SwimChecker" type="RayCast2D" parent="."]
position = Vector2( -13, -10 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 16 )
collision_mask = 256

[node name="CeilingChecker" type="RayCast2D" parent="."]
position = Vector2( -2, -20 )
enabled = true
cast_to = Vector2( 0, -2 )

[node name="LeftFootChecker" type="RayCast2D" parent="."]
position = Vector2( -7, -2 )
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 129

[node name="RightFootChecker" type="RayCast2D" parent="."]
position = Vector2( 3, -2 )
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 129

[node name="InvincibilityEffect" type="AnimatedSprite" parent="."]
visible = false
material = SubResource( 5 )
position = Vector2( -2, -16 )
frames = SubResource( 24 )
frame = 15
speed_scale = 5.0
playing = true

[node name="GroundDust" parent="." instance=ExtResource( 3 )]
position = Vector2( -2, 0 )

[node name="SoundEffects" type="Node" parent="."]

[node name="SFX1" type="AudioStreamPlayer" parent="SoundEffects"]
bus = "SFX"

[node name="SFX2" type="AudioStreamPlayer" parent="SoundEffects"]
bus = "SFX"

[node name="SFX3" type="AudioStreamPlayer" parent="SoundEffects"]
bus = "SFX"

[node name="SFX4" type="AudioStreamPlayer" parent="SoundEffects"]
bus = "SFX"

[node name="StateMachine" type="Node2D" parent="."]

[node name="stand" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="run" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="swim" type="Node" parent="StateMachine"]
script = ExtResource( 19 )

[node name="Timer" type="Timer" parent="StateMachine/swim"]

[node name="enter_swim" type="Node" parent="StateMachine"]
script = ExtResource( 20 )

[node name="Tween" type="Tween" parent="StateMachine/enter_swim"]
playback_process_mode = 0

[node name="push_wall" type="Node" parent="StateMachine"]
script = ExtResource( 10 )

[node name="fall" type="Node" parent="StateMachine"]
script = ExtResource( 11 )

[node name="jump" type="Node" parent="StateMachine"]
script = ExtResource( 13 )

[node name="expulse" type="Node" parent="StateMachine"]
script = ExtResource( 9 )

[node name="wallslide" type="Node" parent="StateMachine"]
script = ExtResource( 14 )

[node name="walljump" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="enter_door" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="enter_door_fade" type="Node" parent="StateMachine"]
script = ExtResource( 15 )

[node name="exit_door_fade" type="Node" parent="StateMachine"]
script = ExtResource( 22 )

[node name="use_power" type="Node" parent="StateMachine"]
script = ExtResource( 17 )

[node name="death" type="Node" parent="StateMachine"]
script = ExtResource( 18 )

[node name="respawn" type="Node" parent="StateMachine"]
script = ExtResource( 16 )

[node name="Timer" type="Timer" parent="StateMachine/respawn"]
one_shot = true

[node name="floor_turn" type="Node" parent="StateMachine"]
script = ExtResource( 12 )

[node name="kiss_princess" type="Node" parent="StateMachine"]
script = ExtResource( 23 )

[node name="tongue" type="Node" parent="StateMachine"]
script = ExtResource( 24 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="NetworkDeadReckoning" type="Tween" parent="."]
repeat = true
playback/repeat = true
[connection signal="timeout" from="StateMachine/swim/Timer" to="StateMachine/swim" method="on_timer_timeout"]
[connection signal="timeout" from="StateMachine/respawn/Timer" to="StateMachine/respawn" method="on_timer_timeout"]
